[gd_scene load_steps=34 format=2]

[ext_resource path="res://Lemons Can Fly.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Coordinates.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Abilities.gd" type="Script" id=3]
[ext_resource path="res://Tutorials/dot product.png" type="Texture" id=4]
[ext_resource path="res://coordinate_button.png" type="Texture" id=5]
[ext_resource path="res://UI/Stinkbomb.png" type="Texture" id=6]
[ext_resource path="res://UI/Soap.png" type="Texture" id=7]
[ext_resource path="res://UI/water.png" type="Texture" id=8]
[ext_resource path="res://UI/Nerf.png" type="Texture" id=9]
[ext_resource path="res://distance.png" type="Texture" id=10]
[ext_resource path="res://vector addition.png" type="Texture" id=11]
[ext_resource path="res://UI/Vaccine.png" type="Texture" id=12]
[ext_resource path="res://UI/Sleeping.png" type="Texture" id=13]
[ext_resource path="res://vector dot product.png" type="Texture" id=14]
[ext_resource path="res://vector substraction.png" type="Texture" id=15]
[ext_resource path="res://intro.tres" type="DynamicFont" id=16]
[ext_resource path="res://Tutorials/Vector1.png" type="Texture" id=17]
[ext_resource path="res://Tutorials/Vector2.png" type="Texture" id=18]
[ext_resource path="res://Tutorials/vector length.png" type="Texture" id=19]
[ext_resource path="res://Tutorials/vector addition.png" type="Texture" id=20]
[ext_resource path="res://Tutorials/vector subtraction.png" type="Texture" id=21]
[ext_resource path="res://Tutorials/position_vector.png" type="Texture" id=22]
[ext_resource path="res://Tutorials/tutorial text box.png" type="Texture" id=23]
[ext_resource path="res://Scenes/vector length.gd" type="Script" id=24]
[ext_resource path="res://Tutorials/vektori pikkus.png" type="Texture" id=25]

[sub_resource type="DynamicFont" id=2]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 75.5486, 57.4386 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 72
extra_spacing_top = -32
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 0.1
} ]

[node name="Abilities" type="Node2D"]
script = ExtResource( 3 )

[node name="Nerfgun" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -858.702
margin_top = -176.858
margin_right = -517.702
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soap" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -1199.07
margin_top = -176.858
margin_right = -858.068
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -686.932
margin_top = -176.858
margin_right = -345.932
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vaccine" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -1028.57
margin_top = -176.858
margin_right = -687.569
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sleep" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -515.638
margin_top = -176.858
margin_right = -174.638
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stinkbomb" type="TextureButton" parent="." groups=["Ability_buttons"]]
margin_left = -1369.57
margin_top = -176.858
margin_right = -1028.57
margin_bottom = 164.142
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coordinates" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -2100, 770 )
texture = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="X_up" type="Area2D" parent="Coordinates"]
position = Vector2( -33.4496, -4.13212 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Coordinates/X_up"]
polygon = PoolVector2Array( -5.65961, -30.1948, -30.694, 6.35541, -5.65961, 12.8644, -5.15894, 34.394, 9.36108, 34.8947, 10.3624, 11.3624, 28.3872, 9.86029, 26.3845, -0.654175, 2.85211, -28.6927 )

[node name="X_down" type="Area2D" parent="Coordinates"]
position = Vector2( -33.4497, 85.1023 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Coordinates/X_down"]
polygon = PoolVector2Array( -5.65961, -30.1948, -30.694, 6.35541, -5.65961, 12.8644, -5.15894, 34.394, 9.36108, 34.8947, 10.3624, 11.3624, 28.3872, 9.86029, 26.3845, -0.654175, 2.85211, -28.6927 )

[node name="Y_up" type="Area2D" parent="Coordinates"]
position = Vector2( 37.6485, -4.13212 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Coordinates/Y_up"]
polygon = PoolVector2Array( -5.65961, -30.1948, -30.694, 6.35541, -5.65961, 12.8644, -5.15894, 34.394, 9.36108, 34.8947, 10.3624, 11.3624, 28.3872, 9.86029, 26.3845, -0.654175, 2.85211, -28.6927 )

[node name="Y_down" type="Area2D" parent="Coordinates"]
position = Vector2( 37.6484, 84.4366 )
rotation = 3.14159

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Coordinates/Y_down"]
polygon = PoolVector2Array( -5.65961, -30.1948, -30.694, 6.35541, -5.65961, 12.8644, -5.15894, 34.394, 9.36108, 34.8947, 10.3624, 11.3624, 28.3872, 9.86029, 26.3845, -0.654175, 2.85211, -28.6927 )

[node name="Xcoord" type="Label" parent="Coordinates"]
margin_left = -200.824
margin_top = -62.4221
margin_right = -97.8239
margin_bottom = 94.5779
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ycoord" type="Label" parent="Coordinates"]
margin_left = 154.012
margin_top = -53.8538
margin_right = 257.012
margin_bottom = 103.146
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Magnitude" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -2100, 770 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="answer_box" type="Area2D" parent="Magnitude"]
position = Vector2( 303.35, 96.8699 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnitude/answer_box"]
position = Vector2( -153.502, -96.8699 )
shape = SubResource( 3 )

[node name="Target" type="Label" parent="Magnitude/answer_box"]
margin_left = -596.308
margin_top = -151.291
margin_right = -374.308
margin_bottom = -69.2913
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Target"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer" type="LineEdit" parent="Magnitude/answer_box"]
margin_left = -228.423
margin_top = -150.724
margin_right = -50.423
margin_bottom = -58.723
focus_mode = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
placeholder_text = "length"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector addition" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -2100, 770 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Target" type="Label" parent="Vector addition"]
margin_left = 148.234
margin_top = -41.8231
margin_right = 299.234
margin_bottom = 40.1769
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Target"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generated_vector" type="Label" parent="Vector addition"]
margin_left = -57.3301
margin_top = -41.71
margin_right = 93.6699
margin_bottom = 40.29
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "(-2,3)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_x" type="LineEdit" parent="Vector addition"]
margin_left = -431.568
margin_top = -41.71
margin_right = -263.568
margin_bottom = 40.29
focus_mode = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2
placeholder_text = "x"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_y" type="LineEdit" parent="Vector addition"]
margin_left = -219.406
margin_top = -41.8231
margin_right = -51.4055
margin_bottom = 40.1769
focus_mode = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
placeholder_text = "y"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector subtraction" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -2100, 770 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Target" type="Label" parent="Vector subtraction"]
margin_left = 148.234
margin_top = -41.8231
margin_right = 299.234
margin_bottom = 40.1769
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Target"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generated_vector" type="Label" parent="Vector subtraction"]
margin_left = -57.3301
margin_top = -41.71
margin_right = 93.6699
margin_bottom = 40.29
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "(-2,3)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_x" type="LineEdit" parent="Vector subtraction"]
margin_left = -431.568
margin_top = -41.71
margin_right = -263.568
margin_bottom = 40.29
focus_mode = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 2
placeholder_text = "x"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="answer_y" type="LineEdit" parent="Vector subtraction"]
margin_left = -219.406
margin_top = -41.8231
margin_right = -51.4055
margin_bottom = 40.1769
focus_mode = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
placeholder_text = "y"
placeholder_alpha = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector dot product" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -2100, 770 )
texture = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Target" type="Label" parent="Vector dot product"]
margin_left = -57.3301
margin_top = -41.8231
margin_right = 93.6699
margin_bottom = 40.1769
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
text = "Target"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generated_vector" type="Label" parent="Vector dot product"]
margin_left = -279.33
margin_top = -41.8231
margin_right = -128.33
margin_bottom = 40.1769
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scalar_product" type="LineEdit" parent="Vector dot product"]
margin_left = 175.754
margin_top = -41.71
margin_right = 326.754
margin_bottom = 40.29
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 16 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
align = 1
placeholder_text = "int"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dot tutorial" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 2300, 140 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
offset = Vector2( 20, 60 )

[node name="scal_tut_text" type="Label" parent="dot tutorial"]
margin_left = -3.99336
margin_top = 104.648
margin_right = 188.007
margin_bottom = 271.649
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "SCAL_TUT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vector tutorial" type="AnimatedSprite" parent="." groups=["Tutorial"]]
position = Vector2( 2301.57, 140 )
frames = SubResource( 9 )
frame = 1
playing = true

[node name="tutorial text box" type="Sprite" parent="Vector tutorial"]
position = Vector2( 147.753, 333.273 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="vec_tut_text" type="Label" parent="Vector tutorial/tutorial text box"]
margin_left = -93.2341
margin_top = -80.5
margin_right = 98.7662
margin_bottom = 86.501
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "VEC_TUT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="position_vector" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 2300, 140 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 22 )

[node name="tutorial text box2" type="Sprite" parent="position_vector"]
position = Vector2( 186.654, 416.591 )
scale = Vector2( 1.875, 1.875 )
texture = ExtResource( 23 )

[node name="vec_tut_text" type="Label" parent="position_vector/tutorial text box2"]
margin_left = -93.2341
margin_top = -80.5
margin_right = 98.7662
margin_bottom = 86.501
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "POS_VEC_TUT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vector length" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 2302.1, 152.864 )
texture = ExtResource( 19 )
offset = Vector2( -50, 0 )
script = ExtResource( 24 )
estonian_texture = ExtResource( 25 )

[node name="tutorial text box3" type="Sprite" parent="vector length"]
position = Vector2( 147.224, 320.409 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="vec_len_text" type="Label" parent="vector length/tutorial text box3"]
margin_left = -93.2341
margin_top = -80.5
margin_right = 98.7662
margin_bottom = 86.501
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Vector length"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tut vector addition" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 2299.46, 142.165 )
texture = ExtResource( 20 )

[node name="tutorial text box4" type="Sprite" parent="tut vector addition"]
position = Vector2( 149.86, 331.108 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="vec_add_text" type="Label" parent="tut vector addition/tutorial text box4"]
margin_left = -93.2341
margin_top = -80.5
margin_right = 98.7662
margin_bottom = 86.501
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Vector 
addition"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tut vector subtraction" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 2309.47, 139.337 )
texture = ExtResource( 21 )

[node name="tutorial text box5" type="Sprite" parent="tut vector subtraction"]
position = Vector2( 139.848, 333.936 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 23 )

[node name="vec_sub_text" type="Label" parent="tut vector subtraction/tutorial text box5"]
margin_left = -93.2341
margin_top = -80.5
margin_right = 98.7662
margin_bottom = 86.501
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Vector
subtraction"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Blank system" type="Sprite" parent="." groups=["targeting_system"]]
position = Vector2( -1100, 770 )

[node name="Blank Tutorial" type="Sprite" parent="." groups=["Tutorial"]]
position = Vector2( 1150, 140 )

[connection signal="button_up" from="Nerfgun" to="." method="_on_Stickyhand_button_up"]
[connection signal="button_up" from="Soap" to="." method="_on_Soap_button_up"]
[connection signal="button_up" from="Water" to="." method="_on_Water_button_up"]
[connection signal="button_up" from="Vaccine" to="." method="_on_Vaccine_button_up"]
[connection signal="button_up" from="Sleep" to="." method="_on_Sleep_button_up"]
[connection signal="button_up" from="Stinkbomb" to="." method="_on_Stinkbomb_button_up"]
[connection signal="update_target" from="Coordinates" to="." method="_on_Coordinates_update_target"]
[connection signal="input_event" from="Coordinates/X_up" to="Coordinates" method="_on_X_up_input_event"]
[connection signal="input_event" from="Coordinates/X_down" to="Coordinates" method="_on_X_down_input_event"]
[connection signal="input_event" from="Coordinates/Y_up" to="Coordinates" method="_on_Y_up_input_event"]
[connection signal="input_event" from="Coordinates/Y_down" to="Coordinates" method="_on_Y_down_input_event"]
[connection signal="text_changed" from="Magnitude/answer_box/answer" to="." method="_on_answer_text_changed"]
[connection signal="text_changed" from="Vector dot product/scalar_product" to="." method="_on_scalar_product_text_changed"]
